src-java/testing/functional-tests/src/main/groovy/org/openkilda/functionaltests/error/link/LinkPropertiesNotUpdatedExpectedError.groovy
package org.openkilda.functionaltests.error.link

import org.openkilda.functionaltests.error.AbstractExpectedError
import org.springframework.http.HttpStatus

import java.util.regex.Pattern

class LinkPropertiesNotUpdatedExpectedError extends AbstractExpectedError{
    final static HttpStatus statusCode = HttpStatus.BAD_REQUEST
    final static String message = "Can't create/update link props"

    LinkPropertiesNotUpdatedExpectedError(Pattern descriptionPattern) {
        super(statusCode, message, descriptionPattern)
    }
}
